--- a/gistic/haram/PanoramaHaram-HTML-Mobile-Prototype/frame.html
+++ b/gistic/haram/PanoramaHaram-HTML-Mobile-Prototype/frame.html
@@ -71,7 +71,7 @@
 
 
 	<div class="frame_generic">
-		<div class="body_generic skin_apple-phone-iphone6-2 skin-wrapper skin-os-apple skin-device-phone skin-model-iphone6 skin-size-2 skin-color-black skin-orientation-portrait">
+		<div class="body_generic skin_apple-phone-iphone6-2 skin-wrapper skin-os-apple skin-device-phone skin-model-iphone6 skin-size-2 skin-color-white skin-orientation-portrait">
 
 			<div class="buttons top"></div>
 			<div class="detail-top"></div>
