--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 	</head>
 
 	<body>
-        <h1>Ahmed Ghalab - Demos</h1>
+        <h1>Gistic Demos</h1>
         <a href="gistic/haram/PanoramaHaram-HTML-Mobile-Prototype/index.html"> Panorama Haram - Mobile Prototype v5 </a>
         <br/>
         <a href="gistic/haram/timesquare-demo/demo/Basher.html"> Basher - Video Panorama Demo </a>
+        <br/>
+        <h1>CartoDB Demos</h1>
+        <a href="demos/instagram/index.html"> LocaPhoto - My Instagram Grotagged Media Posts</a>
 	</body>
 </html> 
