fix: typo error in home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <a href="gistic/haram/timesquare-demo/demo/Basher.html"> Basher - Video Panorama Demo </a>
         <br/>
         <h1>CartoDB Demos</h1>
-        <a href="demos/instagram/index.html"> LocaPhoto - My Instagram Grotagged Media Posts</a>
+        <a href="demos/instagram/index.html"> LocaPhoto - My Instagram Geotagged Media Posts</a>
 	</body>
 </html> 
