Demo: iOS Calculator first standford slides app

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <br/>
         <h1>CartoDB Demos</h1>
         <a href="demos/instagram/index.html"> LocaPhoto - My Instagram Geotagged Media Posts</a>
+        <h1>iOS Demos</h1>
+        <a href="projects/standford-swift-iOS/Calculator/demo-calculator-swift.mov"> Calculator - Standford Course app</a>
+        <br/>
 	</body>
 </html> 
