--- a/icu-clinical-pharmacist/index.html
+++ b/icu-clinical-pharmacist/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ICU / Clinical Pharmacist - AI Project</title>
+    <title>ICU Clinical Pharmacist - AI Project</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>ICU / Clinical Pharmacist - AI Project</h1>
-        <p>by Ahmed Ghalab</p>
+        <h1>ICU Clinical Pharmacist - AI Project</h1>
     </div>
     <div class="container project-embed">
         <h2 class="mb-3">Project Demo & Objectives</h2>
