--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                        <img src="https://via.placeholder.com/300x200" alt="ICU Clinical Pharmacist AI" class="project-image">
+                        <img src="resume/ai-project.jpg" alt="ICU Clinical Pharmacist AI" class="project-image">
                         <div class="project-info">
                             <h3>ICU Clinical Pharmacist AI</h3>
                             <p>AI model designed to assist specialized clinical pharmacists in intensive care units, improving patient care and medication management.</p>
@@ -153,30 +153,33 @@
                         </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Ynmo Daycare" class="project-image">
+                    <img src="resume/daycare-project.jpg" alt="Ynmo Daycare" class="project-image">
                     <div class="project-info">
                         <h3>Ynmo Daycare Mobile App / Portal</h3>
                         <div class="project-date">Nov 2023 - Present</div>
                         <p>Digital platform with a mobile application that helps daycare managers and teachers manage their work digitally, providing easy team communication and parent engagement.</p>
                         <p><strong>Technologies:</strong> Flutter, Angular</p>
+                        <a href="https://ynmodata.com/daycare/" target="_blank" class="project-link">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Ynmo Tifli App" class="project-image">
+                    <img src="resume/tifli-project.jpg" alt="Ynmo Tifli App" class="project-image">
                     <div class="project-info">
                         <h3>Ynmo Tifli App</h3>
                         <div class="project-date">Jan 2022 - Present</div>
                         <p>Mobile app helping parents monitor their children's developmental progress using digital assessment tools, facilitating access to expert panels for skill development.</p>
                         <p><strong>Technologies:</strong> Flutter</p>
+                        <a href="https://ynmodata.com/tifli/" target="_blank" class="project-link">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Ynmo Schools" class="project-image">
+                    <img src="resume/schools-project.jpg" alt="Ynmo Schools" class="project-image">
                     <div class="project-info">
                         <h3>Ynmo Schools Mobile App / Portal</h3>
                         <div class="project-date">Jan 2020 - Present</div>
                         <p>Digital platform improving care and educational services for individuals with disabilities by enabling practitioners to manage individual plans.</p>
                         <p><strong>Technologies:</strong> Flutter, Angular</p>
+                        <a href="https://ynmodata.com/school/" target="_blank" class="project-link">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
