[Fix] Adjust the Job Title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="resume/AhmedGhalab-Photo.jpg" alt="Ahmed Ghalab" class="profile-image">
                 <div class="profile-info">
                     <h1>Ahmed Ghalab</h1>
-                    <p>Technical Team Lead & AI Engineer</p>
+                    <p>Technical Team Lead, Engineering Manager, AI Engineer</p>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/ahmedghalab" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/0xcodezero" target="_blank"><i class="fab fa-github"></i></a>
