[Feature] Google Calendar Integration into Profile

--- a/index.html
+++ b/index.html
@@ -365,30 +365,13 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
+
+         <!-- Contact Section -->
         <section id="contact">
             <h2 class="section-title">Get In Touch</h2>
-            <div class="contact-form">
-                <form action="#" method="POST">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" class="form-control" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
-            </div>
+            <!-- Google Calendar Appointment Scheduling begin -->
+            <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0MO6suHN_mN54LrOO3GNaNWtaZXaPRvBQiv7g2nTaifN-r8aTQDKUIqi4U6n6BxYSnbRJP6h17?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+            <!-- end Google Calendar Appointment Scheduling -->
         </section>
     </main>
 
