[Feature] Handeling Taghreed Project Resources

--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Taghreed" class="project-image">
+                    <img src="resume/taghreed-project.jpg" alt="Taghreed" class="project-image">
                     <div class="project-info">
-                        <h3>Taghreed</h3>
+                        <h3>Taghreed (POC Research Project <a href="https://explore.lucidya.com/" target="_blank">Lucidya</a>)</h3>
                         <div class="project-date">Apr 2015 - Sep 2015</div>
-                        <p>Social media analytics tool for analyzing and indexing millions of geo-tagged tweets to track digital marketing campaigns. Core engine and patent for Lucidya startup.</p>
+                        <p>Social media analytics tool for analyzing and indexing millions of geo-tagged tweets to track digital marketing campaigns. Core engine and patent for Lucidya startup. <a href="resume/taghreed.pdf" target="_blank">Research Paper</a></p>
                         <p><strong>Technologies:</strong> Java, Spatial Hadoop, Lucene, Ruby on Rails</p>
                     </div>
                 </div>
