[Feature] Adding Daif and Weather HD Projects

--- a/index.html
+++ b/index.html
@@ -188,15 +188,16 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Daif Platform" class="project-image">
+                    <img src="resume/daif-project.jpeg" alt="Daif Platform" class="project-image">
                     <div class="project-info">
                         <h3>Daif Platform - Hajj Tafweej Platform</h3>
                         <div class="project-date">May 2018 - Oct 2018</div>
                         <p>Platform for managing, scheduling, and tracking ~17,000 buses serving over 2 million pilgrims during Hajj 1439 for the Ministry of Hajj and Umrah, Saudi Arabia.</p>
                         <p><strong>Technologies:</strong> Android, .NET</p>
+                        <a href="#" class="project-link video-link" data-video="resume/daif-demo.mp4">View Project</a>
                     </div>
                 </div>
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <img src="https://via.placeholder.com/300x200" alt="Reassure Platform" class="project-image">
                     <div class="project-info">
                         <h3>Reassure Platform</h3>
@@ -213,7 +214,7 @@
                         <p>Utilizing Arabic Wikipedia corpus for building and training Word2vec models to predict relationships between semantic words.</p>
                         <p><strong>Technologies:</strong> Spark, Word2Vec, Python</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="project-card">
                     <img src="resume/taghreed-project.jpg" alt="Taghreed" class="project-image">
                     <div class="project-info">
@@ -224,11 +225,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Clear Day" class="project-image">
+                    <img src="resume/weatherhd-project.jpg" alt="Clear Day" class="project-image">
                     <div class="project-info">
                         <h3>Clear Day™ (formerly Weather HD)</h3>
-                        <p>Weather application presenting forecasts through vivid videos, weather maps, animated radar and cloud coverage.</p>
-                        <p><strong>Achievement:</strong> 1st weather app when released, remained in best 50 paid weather apps in US market.</p>
+                        <p>Weather app to present daily forecasts through vivid videos, weather maps, animated radar and cloud coverage.</p>
+                        <p><strong>Achievements:</strong> One of the best weather apps worldwide upon released, remained in best 50 paid weather apps for years with over 10M active users.</p>
                     </div>
                 </div>
             </div>
@@ -392,6 +393,17 @@
             </div>
         </div>
     </footer>
+    <!-- Video Modal -->
+    <div id="video-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <video id="modal-video" controls>
+                <source src="" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
